force-app/main/default/objects/EstudioOportunidad__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <formula>Oportunidad__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta</label>
    <type>Text</type>
</CustomField>