force-app/main/default/objects/EstudioOportunidad__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <description>Inicialmente, cuando el vendedor envía una Oportunidad para estudio, todos los Estudios de Oportunidad se crean con estado &quot;Abierto&quot;, luego Compras administra el estado de los estudios conforme los trabaja.</description>
    <inlineHelpText>Inicialmente, cuando el vendedor envía una Oportunidad para estudio, todos los Estudios de Oportunidad se crean con estado &quot;Abierto&quot;, luego Compras administra el estado de los estudios conforme los trabaja.</inlineHelpText>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierto</fullName>
                <default>true</default>
                <label>Abierto</label>
            </value>
            <value>
                <fullName>En estudio</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>