force-app/main/default/objects/EstudioOportunidad__c/fields/Fabrica__c.field-meta.xml
<CustomField>
    <fullName>Fabrica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fabrica</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>EstudioDeOportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>