force-app/main/default/objects/EstudioOportunidad__c/fields/Fecha_de_Compromiso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Compromiso__c</fullName>
    <formula>Oportunidad__r.Fecha_de_Compromiso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Compromiso</label>
    <type>Date</type>
</CustomField>