force-app/main/default/objects/EstudioOportunidad__c/fields/IdCuenta__c.field-meta.xml
<CustomField>
    <fullName>IdCuenta__c</fullName>
    <formula>Oportunidad__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Cuenta</label>
    <type>Text</type>
</CustomField>