force-app/main/default/objects/EstudioOportunidad__c/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <formula>TEXT( Oportunidad__r.Incoterm__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incoterm</label>
    <type>Text</type>
</CustomField>