force-app/main/default/objects/EstudioOportunidad__c/fields/Nombre_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Oportunidad__c</fullName>
    <formula>Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Oportunidad</label>
    <type>Text</type>
</CustomField>