force-app/main/default/objects/EstudioOportunidad__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Estudios de Oportunidad</relationshipLabel>
    <relationshipName>EstudioDeOportunidad</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>